--- a/index.pug
+++ b/index.pug
@@ -5,14 +5,14 @@ block page
   section.product
     .product__bg
     .product__item
-      img#image(src="images/placeholder.png", alt="product" width='200')
+      img#image(src="images/placeholder.png", alt="product")
   section.details
-    .details__name#saleDesc 
-    .details__desc#saleCode        
+    .details__name#saleDesc
+    .details__desc#saleCode
     .details__price
-      .details__price--value#price     
-      .details__price--cur#currency  
+      .details__price--value#price
+      .details__price--cur#currency
     .purchase-btn#purchase-btn(onclick="returnPayment()")
-      .purchase-btn--text ซื้อ 
+      .purchase-btn--text ซื้อ
   .loading#load
     img(src="images/Spinner-1s-200px.gif", alt="")
