--- a/style.scss
+++ b/style.scss
@@ -10,9 +10,7 @@ body{
       display: block;
       margin-left: auto;
       margin-right: auto;
-      height: auto;
-      width: 100%;
-      max-width: 100%;
+      height: 320px;
     }
   }
 }
