add disable payment btn after click

--- a/index.pug
+++ b/index.pug
@@ -12,7 +12,7 @@ block page
     .details__price
       .details__price--value#price
       .details__price--cur#currency
-    .purchase-btn#purchase-btn(onclick="returnPayment()")
+    button.purchase-btn#purchase-btn(onclick="returnPayment()")
       .purchase-btn--text ซื้อ
   .loading#load
     img(src="images/Spinner-1s-200px.gif", alt="")
