--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ block page
   section.product
     .product__bg
     .product__item
-      img#image(src="images/placeholder.png", alt="product")
+      img#image(src="images/placeholder.png", alt="")
   section.details
     .details__name#saleDesc
     .details__desc#saleCode
