change error image and check payment step

--- a/index.pug
+++ b/index.pug
@@ -15,4 +15,6 @@ block page
     button.purchase-btn#purchase-btn(onclick="returnPayment()")
       .purchase-btn--text ซื้อ
   .loading#load
-    img(src="images/Spinner-1s-200px.gif", alt="")
+    img(src="images/Vending-Pending.gif", alt="")
+    h4.loading__title เรากำลังเตรียมสินค้าให้คุณ
+    p.loading__desc คุณจะได้รับสินค้าภายใน 1 นาที หากเกินเวลาที่กำหนด กรุณาติดต่อ<br/>ศูนย์บริการลูกค้า ทรูมันนี่ 1240
