--- a/maintenance.pug
+++ b/maintenance.pug
@@ -2,7 +2,7 @@ extends _template
 block page
   -var index = 'error'
 block body
-  img.success__img(src="images/error1.png", alt="")
+  img.success__img(src="images/placeholderProduct.png", alt="")
   section.success
     .success__name ขออภัย ระบบกำลังปรับปรุง
     .success__desc กรุณารอสักครู่ แล้วเข้าใช้งานอีกครั้ง
