--- a/style.scss
+++ b/style.scss
@@ -153,15 +153,25 @@ button{
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(187, 187, 187, 0.54);
+  // background-color: rgba(187, 187, 187, 0.54);
   display: none;
   &.show{
     display: block;
     > img{
       position: relative;
-      top: 30%;
+      padding-top: 10vh;
       left: 50%;
       transform: translateX(-50%);
     }
+  }
+  &__title{
+    text-align: center;
+    font-size: 24px;
+  }
+  &__desc{
+    text-align: center;
+    font-size: 16px;
+    color: rgb(153, 153, 153);
+    padding: 0 4rem;
   }
 }
