add onpaste function

--- a/_template.pug
+++ b/_template.pug
@@ -30,7 +30,7 @@ html(lang="en")
       -var index = 'HOME'
     block body
     block script
-      if index == 'HOME'
+      if index === 'HOME'
         script(src='js/auth.js')
-      else if index == 'otp'
+      else if index === 'otp'
         script(src='js/otp.js')
